--- a/config.gradle
+++ b/config.gradle
@@ -2,48 +2,51 @@ import org.apache.tools.ant.filters.ReplaceTokens;
 apply from: 'GitHeadHash.gradle'
 
 artifactMapping = [
-'eventsource-xml':                'de.huxhorn.lilith.data.eventsource-xml',
-'eventsource':                    'de.huxhorn.lilith.data.eventsource',
-'lilith-data':                    'lilith-data', // ignore
-'lilith-sender':                  'de.huxhorn.lilith.sender',
-'logging':                        'de.huxhorn.lilith.data.logging',
-'logging-io-test':                'de.huxhorn.lilith.data.logging-io-test',
-'logging-xml':                    'de.huxhorn.lilith.data.logging-xml',
-'logging-xml-serializer':         'de.huxhorn.lilith.data.logging-xml-serializer',
-'logging-protobuf':               'de.huxhorn.lilith.data.logging.protobuf',
-'logging-json-serializer':        'de.huxhorn.lilith.data.logging-json-serializer',
-'access':                         'de.huxhorn.lilith.data.access',
-'access-protobuf':                'de.huxhorn.lilith.data.access.protobuf',
-'lilith-constants':               'de.huxhorn.lilith.constants',
-'lilith-engine':                  'de.huxhorn.lilith.engine',
-'lilith-xml-logging':             'de.huxhorn.lilith.xml-logging',
-'logback':                        'logback', // ignore
-'classic':                        'de.huxhorn.lilith.logback.classic',
-'logging-adapter':                'de.huxhorn.lilith.logback.logging-adapter',
-'access-adapter':                 'de.huxhorn.lilith.logback.access-adapter',
-'producer-classic':               'de.huxhorn.lilith.logback.producer.classic',
-'producer-access':                'de.huxhorn.lilith.logback.producer.access',
-'multiplex-appender-core':        'de.huxhorn.lilith.logback.appender.multiplex-core',
-'multiplex-appender-classic':     'de.huxhorn.lilith.logback.appender.multiplex-classic',
-'multiplex-appender-access':      'de.huxhorn.lilith.logback.appender.multiplex-access',
-'multiplex-appender-classic-xml': 'de.huxhorn.lilith.logback.appender.multiplex-classic-xml',
-'shutdown-context-listener':      'de.huxhorn.lilith.logback.servlet',
-'encoder-core':                   'de.huxhorn.lilith.logback.encoder.core',
-'encoder-classic':                'de.huxhorn.lilith.logback.encoder.classic',
-'encoder-access':                 'de.huxhorn.lilith.logback.encoder.access',
-'log4j':                          'log4j', // ignore
-'log4j-throwable-parser':         'de.huxhorn.lilith.log4j.throwable',
-'log4j-xml':                      'de.huxhorn.lilith.log4j.xml',
-'log4j-producer':                 'de.huxhorn.lilith.log4j.producer',
-'jul':                            'jul', // ignore
-'jul-xml':                        'de.huxhorn.lilith.jul.xml',
-'jul-slf4j-handler':              'de.huxhorn.lilith.jul-slf4j-handler',
-'lilith-sounds':                  'de.huxhorn.lilith.sounds',
-'lilith-prefs':                   'de.huxhorn.lilith.prefs',
-'lilith-conditions':              'de.huxhorn.lilith.conditions',
-'lilith':                         'de.huxhorn.lilith',
-'slf4j':                          'de.huxhorn.lilith.slf4j',
-'tracing':                        'de.huxhorn.lilith.tracing'
+'eventsource-xml':                 'de.huxhorn.lilith.data.eventsource-xml',
+'eventsource':                     'de.huxhorn.lilith.data.eventsource',
+'lilith-data':                     'lilith-data', // ignore
+'lilith-sender':                   'de.huxhorn.lilith.sender',
+'logging':                         'de.huxhorn.lilith.data.logging',
+'logging-io-test':                 'de.huxhorn.lilith.data.logging-io-test',
+'logging-xml':                     'de.huxhorn.lilith.data.logging-xml',
+'logging-xml-serializer':          'de.huxhorn.lilith.data.logging-xml-serializer',
+'logging-protobuf':                'de.huxhorn.lilith.data.logging.protobuf',
+'logging-json':                    'de.huxhorn.lilith.data.logging-json',
+'logging-json-serializer':         'de.huxhorn.lilith.data.logging-json-serializer',
+'access':                          'de.huxhorn.lilith.data.access',
+'access-protobuf':                 'de.huxhorn.lilith.data.access.protobuf',
+'lilith-constants':                'de.huxhorn.lilith.constants',
+'lilith-engine':                   'de.huxhorn.lilith.engine',
+'lilith-xml-logging':              'de.huxhorn.lilith.xml-logging',
+'lilith-json-logging':             'de.huxhorn.lilith.json-logging',
+'logback':                         'logback', // ignore
+'classic':                         'de.huxhorn.lilith.logback.classic',
+'logging-adapter':                 'de.huxhorn.lilith.logback.logging-adapter',
+'access-adapter':                  'de.huxhorn.lilith.logback.access-adapter',
+'producer-classic':                'de.huxhorn.lilith.logback.producer.classic',
+'producer-access':                 'de.huxhorn.lilith.logback.producer.access',
+'multiplex-appender-core':         'de.huxhorn.lilith.logback.appender.multiplex-core',
+'multiplex-appender-classic':      'de.huxhorn.lilith.logback.appender.multiplex-classic',
+'multiplex-appender-access':       'de.huxhorn.lilith.logback.appender.multiplex-access',
+'multiplex-appender-classic-xml':  'de.huxhorn.lilith.logback.appender.multiplex-classic-xml',
+'multiplex-appender-classic-json': 'de.huxhorn.lilith.logback.appender.multiplex-classic-json',
+'shutdown-context-listener':       'de.huxhorn.lilith.logback.servlet',
+'encoder-core':                    'de.huxhorn.lilith.logback.encoder.core',
+'encoder-classic':                 'de.huxhorn.lilith.logback.encoder.classic',
+'encoder-access':                  'de.huxhorn.lilith.logback.encoder.access',
+'log4j':                           'log4j', // ignore
+'log4j-throwable-parser':          'de.huxhorn.lilith.log4j.throwable',
+'log4j-xml':                       'de.huxhorn.lilith.log4j.xml',
+'log4j-producer':                  'de.huxhorn.lilith.log4j.producer',
+'jul':                             'jul', // ignore
+'jul-xml':                         'de.huxhorn.lilith.jul.xml',
+'jul-slf4j-handler':               'de.huxhorn.lilith.jul-slf4j-handler',
+'lilith-sounds':                   'de.huxhorn.lilith.sounds',
+'lilith-prefs':                    'de.huxhorn.lilith.prefs',
+'lilith-conditions':               'de.huxhorn.lilith.conditions',
+'lilith':                          'de.huxhorn.lilith',
+'slf4j':                           'de.huxhorn.lilith.slf4j',
+'tracing':                         'de.huxhorn.lilith.tracing'
 ]
 
 dependsOnChildren()
