--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -282,6 +282,18 @@
 		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.jul.xml-import</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.jul.xml.receiver</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.prefs</artifactId>
 			<scope>compile</scope>
 		</dependency>
