Globally excluding commons-logging.

--- a/config.gradle
+++ b/config.gradle
@@ -179,7 +179,11 @@ subprojects {
        mavenRepo urls: localReleaseRepo
        mavenRepo urls: localSnapshotRepo
     }
-
+    
+	configurations {
+		all*.exclude group: 'commons-logging', module: 'commons-logging'
+	}
+	
     dependencies {
         testCompile libraries.junit
         testCompile libraries.'slf4j-api'
