New version handling.
Execute 'gradle -Drelease=something' for release.

--- a/config.gradle
+++ b/config.gradle
@@ -61,6 +61,10 @@ allprojects {
 	defaultTasks 'clean', 'build', 'uploadArchives'
 	group = 'de.huxhorn.lilith'
 	version = '0.9.40'
+	if(!System.properties.'release')
+	{
+		version = version + '-SNAPSHOT'
+	}
 }
 
 def localReleaseRepo = new File("${System.properties.'user.home'}/local-gradle-repository/release").toURL().toString()
@@ -194,6 +198,10 @@ subprojects {
 		manifest.attributes provider: 'gradle'
 	}
 
+/*
+	Does not work.
+	processResources is evaluated before this is executed.
+	
 	task release(dependsOn: [build.taskDependencies]) << {
 		println 'Finished release.'
 	}
@@ -202,7 +210,9 @@ subprojects {
 		if (!taskGraph.hasTask(release)) {
 			version = version+'-SNAPSHOT'
 		}
+		println version
 	}
+*/
 
 	def deployer = null
 	
