--- a/config.gradle
+++ b/config.gradle
@@ -243,18 +243,17 @@ subprojects {
 
 }
 
-// TODO: Exclude commons-logging globally
 // TODO: shaded/uberjar
-// TODO: Add (renamed) lilith.jar to /libs of dists
 // TODO: OSX
 // TODO: gpg-sign
 project(':lilith') {
 	
 	jar {
 		manifest.attributes(
-			"Main-Class": "de.huxhorn.lilith.Lilith"//,
-
-			// TODO: "Class-Path": ??
+			"Main-Class": "de.huxhorn.lilith.Lilith",
+			// Class-Path must be evaluated at runtime not configuration time.
+			// see http://gradle.1045684.n5.nabble.com/Manifest-classpath-incomplete-and-distribution-ZIP-empty-td2635807.html
+			"Class-Path": "${ -> configurations.runtime.collect { File file -> file.name }.sort().join(' ')}"
 		)
 
 	}
@@ -319,24 +318,35 @@ project(':lilith') {
 			}
 			
 			into('libs') {
-				from configurations.runtime {
-					exclude '*-source.jar'
-					exclude '*-javadoc.jar'
-				}
+				from configurations.default
+				from configurations.default.allArtifactFiles
+				exclude '*-source.jar'
+				exclude '*-javadoc.jar'
+				rename 'de.huxhorn.lilith-(.*).jar', 'lilith.jar'
 			}
 		}
 	}
-	
-	task distZip(type: Zip) {
+
+/*
+	task distAll(dependsOn: configurations.default.buildArtifacts, type: Jar) {
+		classifier = 'all'
+		from configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
+		exclude 'META-INF/*.SF'
+		exclude 'META-INF/*.DSA'
+		exclude 'META-INF/*.RSA'
+	}
+*/
+
+	task distZip(dependsOn: configurations.default.buildArtifacts, type: Zip) {
 		classifier = 'bin'
 		with distSpec
 	}
 
-	task distTgz(type: Tar) {
+	task distTgz(dependsOn: configurations.default.buildArtifacts, type: Tar) {
 		classifier = 'bin'
 		compression = Compression.GZIP
 		with distSpec
 	}
 	
-	artifacts { archives sourceJar, javadocJar, distZip, distTgz }
+	//artifacts { archives sourceJar, javadocJar, distZip, distTgz }
 }
