--- a/jul/jul-slf4j-handler/pom.xml
+++ b/jul/jul-slf4j-handler/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.jul-slf4j-handler</artifactId>
-	<version>${parent.version}</version>
+	<version><!-- LV -->0.9.40-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>java.util.logging Handler using SLF4J</name>
 	<description>This file is part of Lilith. It's a java.util.logging to slf4j bridge handler.</description>
-	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
+	<url>http://lilith.huxhorn.de/projects/${project.artifactId}/</url>
 	
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
