--- a/logback/classic/pom.xml
+++ b/logback/classic/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.logback.classic</artifactId>
-	<version>${parent.version}</version>
+	<version><!-- LV -->0.9.40-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Logback Classic Enhancements</name>
 	<description>This file is part of Lilith. It contains an NDC implementation that can be used in conjunction with the lilith appenders to get NDC functionality in Logback.</description>
-	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
+	<url>http://lilith.huxhorn.de/projects/${project.artifactId}/</url>
 	
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
