--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>pom</packaging>
 	<name>Lilith master pom file</name>
 	<description>This file is part of Lilith. It's the master pom file that is used to build all other modules.</description>
-	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
+	<url>http://lilith.huxhorn.de/projects/${project.artifactId}/</url>
 	
 	<scm>
 		<connection>scm:git:git://github.com/huxi/lilith.git</connection>
