--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.slf4j</artifactId>
-	<version>${parent.version}</version>
+	<version><!-- LV -->0.9.40-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>SLF4J Java5 redesign concept</name>
 	<description>This is a concept how SLF4J could be redesigned for Java&gt;=5</description>
-	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
+	<url>http://lilith.huxhorn.de/projects/${project.artifactId}/</url>
 	
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
