--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -5,7 +5,7 @@ versions = [
 'easymock':       '2.4',
 'httpcomponents': '4.0.1',
 'log4j':          '1.2.16',
-'logback':        '0.9.24',
+'logback':        '0.9.25',
 'slf4j':          '1.6.1',
 'jackson':        '1.6.0',
 'commonsLogging': '1.1.1',
@@ -67,6 +67,7 @@ libraries = [
 'sulky-sounds-impl-jlayer': "de.huxhorn.sulky:de.huxhorn.sulky.sounds-impl-jlayer:${versions.sulky}",
 'sulky-stax':               "de.huxhorn.sulky:de.huxhorn.sulky.stax:${versions.sulky}",
 'sulky-swing':              "de.huxhorn.sulky:de.huxhorn.sulky.swing:${versions.sulky}",
-'sulky-tasks':              "de.huxhorn.sulky:de.huxhorn.sulky.tasks:${versions.sulky}"
+'sulky-tasks':              "de.huxhorn.sulky:de.huxhorn.sulky.tasks:${versions.sulky}",
+'sulky-plist':              "de.huxhorn.sulky:de.huxhorn.sulky.plist:${versions.sulky}"
 ]
 
