--- a/log4j/log4j-producer/pom.xml
+++ b/log4j/log4j-producer/pom.xml
@@ -7,7 +7,7 @@
 	<version><!-- LV -->0.9.40-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Lilith - LOG4J - Producer</name>
-	<description>This file is part of Lilith. It contains LOG4J XML I/O.</description>
+	<description>This file is part of Lilith. It contains the LOG4J Producer.</description>
 	<url>http://lilith.huxhorn.de/projects/${project.artifactId}/</url>
 	
 	<parent>
