--- a/config.gradle
+++ b/config.gradle
@@ -53,6 +53,34 @@ artifactMapping = [
 'tracing':                         'de.huxhorn.lilith.tracing'
 ]
 
+buildscript {
+	apply from: 'dependencyDefinitions.gradle'
+	localReleaseRepoFile = new File("${System.properties.'user.home'}/local-gradle-repository/release")
+	localSnapshotRepoFile = new File("${System.properties.'user.home'}/local-gradle-repository/snapshot")
+	localReleaseRepo = localReleaseRepoFile.toURL().toString()
+	localSnapshotRepo = localSnapshotRepoFile.toURL().toString()
+	repositories {
+		mavenCentral()
+		mavenRepo urls: localReleaseRepo
+		mavenRepo urls: localSnapshotRepo
+	}
+	if(System.properties.'release')
+	{
+		dependencies {
+			classpath 'de.huxhorn.gradle:de.huxhorn.gradle.pgp-plugin:0.0.3',
+			'org.apache.maven.wagon:wagon-webdav-jackrabbit:1.0-beta-6',
+			"de.huxhorn.sulky:de.huxhorn.sulky.plist:${versions.sulky}"
+		}
+	}
+	else
+	{
+		dependencies {
+			classpath 'org.apache.maven.wagon:wagon-webdav-jackrabbit:1.0-beta-6',
+			"de.huxhorn.sulky:de.huxhorn.sulky.plist:${versions.sulky}"
+		}
+	}
+}
+
 dependsOnChildren()
 
 apply plugin: 'base'
@@ -73,34 +101,83 @@ task javadocZip(type: Zip) {
 	from javadoc.outputs.files
 }
 
-buildscript {
-	apply from: 'dependencyDefinitions.gradle'
-	localReleaseRepo = new File("${System.properties.'user.home'}/local-gradle-repository/release").toURL().toString()
-	localSnapshotRepo = new File("${System.properties.'user.home'}/local-gradle-repository/snapshot").toURL().toString()
-	repositories {
-		mavenCentral()
-		mavenRepo urls: localReleaseRepo
-		mavenRepo urls: localSnapshotRepo
+task syncStaging << {
+	if (project.hasProperty('remoteUsername') && project.hasProperty('remoteUsername')) {
+		def stagingRepos = new org.apache.maven.wagon.repository.Repository('staging', 'https://oss.sonatype.org/service/local/staging/deploy/maven2')
+		def auth = new org.apache.maven.wagon.authentication.AuthenticationInfo()
+		auth.userName = remoteUsername
+		auth.password = remotePassword
+		def wagon = new org.apache.maven.wagon.providers.webdav.WebDavWagon()
+
+		wagon.connect(stagingRepos, auth)
+		localReleaseRepoFile.eachFile {
+			if (it.directory) {
+				wagon.putDirectory(it, it.name)
+			} else {
+				wagon.put(it, it.name)
+			}
+		}
+	} else {
+		println "Can't upload site as credentials aren't set. Set with -PremoteUsername=user -PremotePassword=password."
 	}
-	dependencies {
-		//classpath 'de.huxhorn.gradle:pgp-gradle-plugin:0.0.2-SNAPSHOT'
-		classpath "de.huxhorn.sulky:de.huxhorn.sulky.plist:${versions.sulky}"
+}
+
+task syncSnapshot << {
+	if (project.hasProperty('remoteUsername') && project.hasProperty('remoteUsername')) {
+		def snapshotRepos = new org.apache.maven.wagon.repository.Repository('snapshot', 'https://oss.sonatype.org/content/repositories/snapshots')
+		def auth = new org.apache.maven.wagon.authentication.AuthenticationInfo()
+		auth.userName = remoteUsername
+		auth.password = remotePassword
+		def wagon = new org.apache.maven.wagon.providers.webdav.WebDavWagon()
+
+		wagon.connect(snapshotRepos, auth)
+		localSnapshotRepoFile.eachFile {
+			if (it.directory) {
+				wagon.putDirectory(it, it.name)
+			} else {
+				wagon.put(it, it.name)
+			}
+		}
+	} else {
+		println "Can't upload site as credentials aren't set. Set with -PremoteUsername=user -PremotePassword=password."
 	}
 }
 
 allprojects {
-	/*
-    //apply plugin: 'sign'
-    apply plugin: de.huxhorn.gradle.pgp.PgpPlugin
-    
-	pgp {
-		secretKeyRingFile = new File("${System.properties['user.home']}/.gnupg/secring.gpg")
-		keyId = '740A1840'
+	apply plugin: 'project-reports'
+	apply plugin: 'eclipse'
+	apply plugin: 'idea'
+
+	defaultTasks 'clean', 'build', 'uploadArchives'
+	group = 'de.huxhorn.lilith'
+	version = '0.9.40'
+	if(!System.properties.'release')
+	{
+		version = version + '-SNAPSHOT'
 	}
-	*/
 }
 
 subprojects {
+    apply plugin: 'java'
+    apply plugin: 'maven'
+    //apply plugin: 'code-quality'
+
+    sourceCompatibility = 1.5
+    targetCompatibility = 1.5
+
+    compileJava.options.compilerArgs = ['-Xlint:unchecked', '-Xlint:deprecation', '-g']
+
+	if(System.properties.'release')
+	{
+		//apply plugin: 'sign'
+		apply plugin: de.huxhorn.gradle.pgp.PgpPlugin
+
+		pgp {
+			secretKeyRingFile = new File("${System.properties['user.home']}/.gnupg/secring.gpg")
+			keyId = '740A1840'
+		}
+	}
+
 	boolean gpl=['lilith', 'lilith-conditions', 'lilith-engine', 'lilith-xml-logging'].contains(project.name)
 
 	task sourceJar(type: Jar) { from sourceSets.main.allSource; classifier = 'source' }
@@ -110,9 +187,12 @@ subprojects {
 
     defaultProject= {
     	url 'http://lilith.huxhorn.de'
-    	
+    	name project.name
+    	description project.description
     	inceptionYear '2007'
-    	
+    	packaging 'jar' // does not work, fixed below
+    	// See http://jira.codehaus.org/browse/GRADLE-1200
+
     	scm {
     		connection 'scm:git:git://github.com/huxi/lilith.git'
     		developerConnection 'scm:git:ssh://git@github.com:huxi/lilith.git'
@@ -178,7 +258,7 @@ subprojects {
 				id 'huxhorn'
 				email 'huxhorn@users.sourceforge.net'
 				name 'Joern Huxhorn'
-				organization 'Joern Huxhorn'
+				organization = 'Joern Huxhorn'
 				organizationUrl 'http://lilith.huxhorn.de'
 				roles {
 					role 'Developer'
@@ -246,6 +326,35 @@ subprojects {
 	
 	deployer.pom.project defaultProject
 
+	// The following fixes the broken packaging
+	// See http://jira.codehaus.org/browse/GRADLE-1200
+	// Thanks xlson
+	installer.pom.withXml { XmlProvider xmlProvider ->
+		def xml = xmlProvider.asString()
+		def pomXml = new XmlParser().parseText(xml.toString())
+
+		pomXml.version[0] + { packaging('jar') }
+
+		def newXml = new StringWriter()
+		def printer = new XmlNodePrinter(new PrintWriter(newXml))
+		printer.preserveWhitespace = true
+		printer.print(pomXml)
+		xml.setLength(0)
+		xml.append(newXml.toString())
+	}
+	deployer.pom.withXml { XmlProvider xmlProvider ->
+		def xml = xmlProvider.asString()
+		def pomXml = new XmlParser().parseText(xml.toString())
+
+		pomXml.version[0] + { packaging('jar') }
+
+		def newXml = new StringWriter()
+		def printer = new XmlNodePrinter(new PrintWriter(newXml))
+		printer.preserveWhitespace = true
+		printer.print(pomXml)
+		xml.setLength(0)
+		xml.append(newXml.toString())
+	}
 }
 
 // TODO: OSX
